# daedalus

./: .env  .env.example  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
src/: App.tsx  main.tsx
src/cli/: __init__.py  chat.py  chat.ts  components.py  index.tsx  simple.ts
src/cli/components/: InputField.tsx  MessageList.tsx  TaskStatusDisplay.tsx
src/components/: Layout.tsx
src/components/ui/: Button.tsx  DocumentCard.tsx  DocumentTree.tsx
src/lib/: chatEngine.ts  chat_engine.py  documentStore.ts  documentVerification.ts  document_store.py  documents.ts  intent_classifier.py  llm.py  llm.ts  messageStore.ts  message_store.py  sessionManager.ts  verification.ts  workflow.py  workflow.ts  workflowEngine.ts  workflow_engine.py
src/lib/utils/: cn.ts
src/models/: __init__.py  data.py
src/pages/: DocumentView.tsx  Home.tsx  SessionSelector.tsx  SessionWorkspace.tsx  Workspace.tsx
src/stores/: chatStore.ts
src/types/: chat.ts  document.ts
